@@ -44,8 +44,11 @@ if python_path:
     os.putenv('PYTHONPATH', "%s:%s" % (os.getenv('PYTHONPATH', ''), ':'.join(python_path))) # for subprocesses
 
 from pasaffe_lib import readdb
+from pasaffe_lib import set_up_logging, get_version
 
 parser = OptionParser()
+parser.add_option("-v", "--verbose", action="count", dest="verbose",
+                  help="Show debug messages (-vv debugs pasaffe_lib also)")
 parser.add_option("-f", "--file", dest="filename",
                   help="specify alternate GPass database file", metavar="FILE")
 parser.add_option("-m", "--master", dest="master",
@@ -62,6 +65,8 @@ parser.add_option("-n", "--notes", dest="notes",
                   default='', help="specify entry notes")
 
 (options, args) = parser.parse_args()
+
+set_up_logging(options)
 
 if os.environ.has_key('XDG_DATA_HOME'):
     db_filename = os.path.join(os.environ['XDG_DATA_HOME'], 'pasaffe/pasaffe.psafe3')
