@@ -10,6 +10,7 @@ For a detailed list of changes, please see ChangeLog.
    - Don't save database specified on command line as default
    - Properly handle unicode characters with optparse (LP: #983210)
    - Properly handle entries that have no URL specified (LP: #980608)
+   - Fix logging in pasaffe-import scripts so we can debug failures
 
 0.16 (2012-03-24):
 
